--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
     --restart-font-size: 36px;
     --restart-container-offset: 10px; 
 }
+
 html {
     height: 100%;
     width: 100%;
@@ -24,7 +25,7 @@ body {
     align-items: center;
 }
 
-#restart-container {
+#restart-button {
     position: fixed;
     top: var(--restart-container-offset);
     left: calc(100vw - var(--restart-font-size) - var(--restart-container-offset));
@@ -33,27 +34,47 @@ body {
     height: calc(var(--restart-font-size));
     width: calc(var(--restart-font-size));
 
+    transition: transform 0.5s;
+
+    -webkit-user-select: none;
     user-select: none;
+
+    opacity: 0;
+    display: none;
+
+    -webkit-box-shadow: 0px 0px 9px 0px #000000;
+    box-shadow: 0px 0px 9px 0px #000000;
 }
 
-#restart-container > span {
+#restart-button > span {
     display: block;
     font-size: var(--restart-font-size);
     transform: scale(0.9);
+}
+
+#restart-button:hover {
+    transform: rotate(-45deg) scale(1.05);
 }
 
 .button-container {
     display: flex;
     width: 350px;
     justify-content: space-between;
-
 }
+
 .main-button {
     background: white;
     border: 2px solid black;
 
     -webkit-box-shadow: -5px 7px 0px 1px rgba(0,0,0,0.7); 
     box-shadow: -5px 7px 0px 1px rgba(0,0,0,0.7);
+
+    -webkit-user-select: none;
+    user-select: none;
+}
+
+.main-button:hover {
+    transform: scale(1.05);
 }
 
 .main-button img {
